// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationship .add 1`] = `
Object {
  "a": Map {},
  "b": Map {
    0 => "zero",
  },
  "c": Map {
    0 => "zero",
    1 => "one",
  },
}
`;

exports[`Relationship .delete() 1`] = `
Object {
  "deletion": Object {
    "del0two": false,
    "del1one": true,
    "del3two": false,
  },
  "snapshots": Object {
    "a": Map {},
    "b": Map {
      0 => "zero",
      1 => "one",
      2 => "two",
    },
    "c": Map {
      0 => "zero",
      2 => "two",
    },
  },
}
`;

exports[`Relationship .has() 1`] = `
Object {
  "a": Array [
    false,
    false,
  ],
  "b": Array [
    true,
    true,
  ],
  "c": Array [
    false,
    true,
  ],
}
`;
